--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="banner-content">
       <h1>De Data à Z</h1>
       <p>Les données à portée des journalistes</p>
-      <img src="images/logo image.png" alt="logo" class="logo-big">
+      <img src="images/Logo image.png" alt="logo" class="logo-big">
     </div>
   </div>
 
